# groupscholar-enrollment-risk-log

./: README.md  groupscholar-enrollment-risk-log.cabal  ralph-progress.md
app/: Main.hs
db/: schema.sql  seed.sql
src/: RiskAging.hs  RiskScore.hs  RiskStatus.hs  RiskTypes.hs
test/: Spec.hs
